# f1-optimal-predictor

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  weekly_calibration.yml
dashboard/: app.py
data/: calendar_2026.yaml
f1_engine/: __init__.py  config.py
f1_engine/core/: __init__.py  car.py  driver.py  energy.py  kalman_update.py  monte_carlo.py  physics.py  pit_dp.py  race.py  season.py  sensitivity.py  stint.py  strategy.py  team.py  track.py  tyre.py  updating.py
f1_engine/data_ingestion/: __init__.py  fastf1_loader.py
scripts/: __init__.py  calibrate_from_testing.py  run_weekly_pipeline.py
tests/: test_calendar.py  test_fastf1_loader.py  test_kalman.py  test_monte_carlo.py  test_physics.py  test_pit_dp.py  test_pit_strategy.py  test_race.py  test_safety_car.py  test_season.py  test_sensitivity.py  test_stint.py  test_team_driver.py  test_updating.py
